--- a/css/styles.css
+++ b/css/styles.css
@@ -1771,13 +1771,13 @@ mobile menu
 
 .navbar-header {
     position: relative;
+    z-index: 3;
 }
 
 #mobile-menu-btn-open,
 #mobile-menu-btn-close {
     cursor: pointer;
     position: absolute;
-    display: none;
     -webkit-transition: all 0.4s linear;
     transition: all 0.4s linear;
 }
@@ -1787,17 +1787,15 @@ mobile menu
     font-size: 2rem;
     top: 5px;
     right: 0;
-    z-index: 2;
-
+    z-index: 3;
 }
 
 #mobile-menu-btn-close {
     color: #212226;
     font-size: 3rem;
     top: 18px;
-    right: 15px;
-    -webkit-transition: all 0.4s linear;
-    transition: all 0.4s linear;
+    right: 15px; 
+    z-index: 4;
 }
 
 #mobile-nav {
@@ -1807,7 +1805,7 @@ mobile menu
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 4;
     overflow-y: hidden;
     -webkit-transition: all 0.4s linear;
     transition: all 0.4s linear;
